--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -86,25 +86,28 @@
     <Compile Include="Binding\TypeBinders\UShortBinder.cs" />
     <Compile Include="Binding\TypeBinders\ValueTypeBinder.cs" />
     <Compile Include="Channels\ChannelSubscription.cs" />
-    <Compile Include="Channels\Internal\AbstractChannelSubscriptionConfigurator.cs" />
-    <Compile Include="Channels\Internal\AddChannelSubscriber.cs" />
-    <Compile Include="Channels\Internal\ConsumerConfigurator.cs" />
-    <Compile Include="Channels\Internal\ConsumerConfiguratorImpl.cs" />
-    <Compile Include="Channels\Internal\SubscriptionConfigurator.cs" />
+    <Compile Include="Channels\Configuration\AbstractChannelSubscriptionConfigurator.cs" />
+    <Compile Include="Channels\Configuration\AddChannelVisitor.cs" />
+    <Compile Include="Channels\Configuration\ConsumerConfigurator.cs" />
+    <Compile Include="Channels\Configuration\ConsumerConfiguratorImpl.cs" />
+    <Compile Include="Channels\Configuration\DistinctIntervalChannelSubscriptionConfigurator.cs" />
+    <Compile Include="Channels\Configuration\IntervalChannelSubscriptionConfigurator.cs" />
+    <Compile Include="Channels\Configuration\SubscriptionConfigurator.cs" />
     <Compile Include="Channels\ChannelAdapter.cs" />
-    <Compile Include="Channels\Internal\TypedChannelSubscription.cs" />
-    <Compile Include="Channels\Internal\TypedChannelSubscriptionConfigurator.cs" />
-    <Compile Include="Channels\Internal\TypedConfigurator.cs" />
-    <Compile Include="Channels\Internal\TypedSubscriptionConfigurator.cs" />
-    <Compile Include="Channels\Internal\UntypedChannelSubscription.cs" />
-    <Compile Include="Channels\Internal\UntypedChannelSubscriptionConfigurator.cs" />
-    <Compile Include="Channels\Internal\UntypedConfigurator.cs" />
-    <Compile Include="Channels\Internal\UntypedSubscriptionConfigurator.cs" />
+    <Compile Include="Channels\Configuration\TypedChannelSubscription.cs" />
+    <Compile Include="Channels\Configuration\TypedChannelSubscriptionConfigurator.cs" />
+    <Compile Include="Channels\Configuration\TypedConfigurator.cs" />
+    <Compile Include="Channels\Configuration\TypedSubscriptionConfigurator.cs" />
+    <Compile Include="Channels\Configuration\UntypedChannelSubscription.cs" />
+    <Compile Include="Channels\Configuration\UntypedChannelSubscriptionConfigurator.cs" />
+    <Compile Include="Channels\Configuration\UntypedConfigurator.cs" />
+    <Compile Include="Channels\Configuration\UntypedSubscriptionConfigurator.cs" />
+    <Compile Include="Channels\FlattenChannelVisitor.cs" />
     <Compile Include="Channels\UntypedChannelAdapter.cs" />
     <Compile Include="Channels\UntypedChannelRouter.cs" />
     <Compile Include="Channels\ExtensionsForChannels.cs" />
     <Compile Include="Channels\MessageConverter.cs" />
-    <Compile Include="Channels\Internal\RemoveChannelSubscribers.cs" />
+    <Compile Include="Channels\Configuration\RemoveChannelVisitor.cs" />
     <Compile Include="Channels\SelectiveConsumer.cs" />
     <Compile Include="Channels\DefaultMailbox.cs" />
     <Compile Include="Channels\Mailbox.cs" />
@@ -155,15 +158,15 @@
     <Compile Include="Channels\Future.cs" />
     <Compile Include="Channels\Interceptor.cs" />
     <Compile Include="Channels\InterceptorChannel.cs" />
-    <Compile Include="Channels\InterceptorProvider.cs" />
+    <Compile Include="Channels\InterceptorFactory.cs" />
     <Compile Include="Channels\KeyedChannelProvider.cs" />
     <Compile Include="Channels\DistinctIntervalChannel.cs" />
     <Compile Include="Channels\Filter.cs" />
     <Compile Include="Channels\InstanceChannel.cs" />
-    <Compile Include="Channels\Internal\IMessageDictionary.cs" />
-    <Compile Include="Channels\Internal\IMessageList.cs" />
     <Compile Include="Channels\Internal\MessageDictionary.cs" />
     <Compile Include="Channels\Internal\MessageList.cs" />
+    <Compile Include="Channels\Internal\MessageDictionaryImpl.cs" />
+    <Compile Include="Channels\Internal\MessageListImpl.cs" />
     <Compile Include="Channels\IntervalChannel.cs" />
     <Compile Include="Channels\KeyAccessor.cs" />
     <Compile Include="Channels\LastIntervalChannel.cs" />
