--- a/src/Magnum.Specs/Magnum.Specs.csproj
+++ b/src/Magnum.Specs/Magnum.Specs.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Channels\Interval_Specs.cs" />
     <Compile Include="Channels\Mailbox_Specs.cs" />
     <Compile Include="Channels\PingPong_Specs.cs" />
+    <Compile Include="Channels\SynchronizationContext_Specs.cs" />
     <Compile Include="Channels\ThreadPoolChannel_Specs.cs" />
     <Compile Include="Channels\UntypedChannelSubscription_Specs.cs" />
     <Compile Include="CommandLineParser\PlugInCommands\AddFileCommand.cs" />
