Working on serialization for out of app domain messaging

--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -408,6 +408,46 @@
     <Compile Include="Reflection\FastCollectionProperty.cs" />
     <Compile Include="Reflection\FastProperties.cs" />
     <Compile Include="Reflection\ReflectiveVisitorBase.cs" />
+    <Compile Include="Serialization\FastTextSerializer.cs" />
+    <Compile Include="Serialization\FastTextTypeSerializer.cs" />
+    <Compile Include="Serialization\FastTextTypeSerializerCache.cs" />
+    <Compile Include="Serialization\NotAutomaticallyLoadedAttribute.cs" />
+    <Compile Include="Serialization\ObjectSerializer.cs" />
+    <Compile Include="Serialization\Serializer.cs" />
+    <Compile Include="Serialization\TypeDeserializers\ArrayDeserializer.cs" />
+    <Compile Include="Serialization\TypeDeserializers\DictionaryDeserializer.cs" />
+    <Compile Include="Serialization\TypeDeserializers\EnumerableDeserializerBase.cs" />
+    <Compile Include="Serialization\TypeDeserializers\ListDeserializer.cs" />
+    <Compile Include="Serialization\TypeReader.cs" />
+    <Compile Include="Serialization\TypeSerializer.cs" />
+    <Compile Include="Serialization\TypeSerializerLoader.cs" />
+    <Compile Include="Serialization\TypeSerializers\ArraySerializer.cs" />
+    <Compile Include="Serialization\TypeSerializers\BooleanSerializer.cs" />
+    <Compile Include="Serialization\TypeSerializers\ByteSerializer.cs" />
+    <Compile Include="Serialization\TypeSerializers\CharSerializer.cs" />
+    <Compile Include="Serialization\TypeSerializers\DateTimeOffsetSerializer.cs" />
+    <Compile Include="Serialization\TypeSerializers\DateTimeSerializer.cs" />
+    <Compile Include="Serialization\TypeSerializers\DecimalSerializer.cs" />
+    <Compile Include="Serialization\TypeSerializers\DictionarySerializer.cs" />
+    <Compile Include="Serialization\TypeSerializers\DoubleSerializer.cs" />
+    <Compile Include="Serialization\TypeSerializers\EnumerableSerializerBase.cs" />
+    <Compile Include="Serialization\TypeSerializers\EnumSerializer.cs" />
+    <Compile Include="Serialization\TypeSerializers\FloatSerializer.cs" />
+    <Compile Include="Serialization\TypeSerializers\GuidSerializer.cs" />
+    <Compile Include="Serialization\TypeSerializers\IntSerializer.cs" />
+    <Compile Include="Serialization\TypeSerializers\ListSerializer.cs" />
+    <Compile Include="Serialization\TypeSerializers\LongSerializer.cs" />
+    <Compile Include="Serialization\QuotedStringSerializer.cs" />
+    <Compile Include="Serialization\TypeSerializers\SByteSerializer.cs" />
+    <Compile Include="Serialization\TypeSerializers\ShortSerializer.cs" />
+    <Compile Include="Serialization\TypeSerializers\StringSerializer.cs" />
+    <Compile Include="Serialization\TypeSerializers\TimeSpanSerializer.cs" />
+    <Compile Include="Serialization\TypeSerializers\TypeSerializerException.cs" />
+    <Compile Include="Serialization\TypeSerializers\UIntSerializer.cs" />
+    <Compile Include="Serialization\TypeSerializers\ULongSerializer.cs" />
+    <Compile Include="Serialization\TypeSerializers\UriSerializer.cs" />
+    <Compile Include="Serialization\TypeSerializers\UShortSerializer.cs" />
+    <Compile Include="Serialization\TypeWriter.cs" />
     <Compile Include="StateMachine\Activity.cs" />
     <Compile Include="StateMachine\BasicEvent.cs" />
     <Compile Include="StateMachine\BasicEventAction.cs" />
