--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -408,18 +408,25 @@
     <Compile Include="Reflection\FastCollectionProperty.cs" />
     <Compile Include="Reflection\FastProperties.cs" />
     <Compile Include="Reflection\ReflectiveVisitorBase.cs" />
+    <Compile Include="Serialization\DefaultTypeSerializerCache.cs" />
+    <Compile Include="Serialization\FastTextObjectSerializer.cs" />
+    <Compile Include="Serialization\FastTextPropertySerializer.cs" />
+    <Compile Include="Serialization\FastTextPropertyTypeSerializerCache.cs" />
     <Compile Include="Serialization\FastTextSerializer.cs" />
     <Compile Include="Serialization\FastTextTypeSerializer.cs" />
     <Compile Include="Serialization\FastTextTypeSerializerCache.cs" />
     <Compile Include="Serialization\NotAutomaticallyLoadedAttribute.cs" />
     <Compile Include="Serialization\ObjectSerializer.cs" />
+    <Compile Include="Serialization\PropertySerializer.cs" />
     <Compile Include="Serialization\Serializer.cs" />
+    <Compile Include="Serialization\PropertySerializerCache.cs" />
     <Compile Include="Serialization\TypeDeserializers\ArrayDeserializer.cs" />
     <Compile Include="Serialization\TypeDeserializers\DictionaryDeserializer.cs" />
     <Compile Include="Serialization\TypeDeserializers\EnumerableDeserializerBase.cs" />
     <Compile Include="Serialization\TypeDeserializers\ListDeserializer.cs" />
     <Compile Include="Serialization\TypeReader.cs" />
     <Compile Include="Serialization\TypeSerializer.cs" />
+    <Compile Include="Serialization\TypeSerializerCache.cs" />
     <Compile Include="Serialization\TypeSerializerLoader.cs" />
     <Compile Include="Serialization\TypeSerializers\ArraySerializer.cs" />
     <Compile Include="Serialization\TypeSerializers\BooleanSerializer.cs" />
@@ -437,7 +444,7 @@
     <Compile Include="Serialization\TypeSerializers\IntSerializer.cs" />
     <Compile Include="Serialization\TypeSerializers\ListSerializer.cs" />
     <Compile Include="Serialization\TypeSerializers\LongSerializer.cs" />
-    <Compile Include="Serialization\QuotedStringSerializer.cs" />
+    <Compile Include="Serialization\FastTextStringSerializer.cs" />
     <Compile Include="Serialization\TypeSerializers\SByteSerializer.cs" />
     <Compile Include="Serialization\TypeSerializers\ShortSerializer.cs" />
     <Compile Include="Serialization\TypeSerializers\StringSerializer.cs" />
