Refactoring fast text serializer slightly

--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -408,17 +408,16 @@
     <Compile Include="Reflection\FastCollectionProperty.cs" />
     <Compile Include="Reflection\FastProperties.cs" />
     <Compile Include="Reflection\ReflectiveVisitorBase.cs" />
-    <Compile Include="Serialization\DefaultTypeSerializerCache.cs" />
-    <Compile Include="Serialization\FastTextAbstractEnumerableSerializer.cs" />
-    <Compile Include="Serialization\FastTextArraySerializer.cs" />
-    <Compile Include="Serialization\FastTextListSerializer.cs" />
-    <Compile Include="Serialization\FastTextObjectSerializer.cs" />
-    <Compile Include="Serialization\FastTextPropertySerializer.cs" />
-    <Compile Include="Serialization\FastTextPropertyTypeSerializerCache.cs" />
+    <Compile Include="Serialization\TypeSerializerCacheImpl.cs" />
+    <Compile Include="Serialization\FastText\FastTextAbstractEnumerableSerializer.cs" />
+    <Compile Include="Serialization\FastText\FastTextArraySerializer.cs" />
+    <Compile Include="Serialization\FastText\FastTextListSerializer.cs" />
+    <Compile Include="Serialization\FastText\FastTextObjectSerializer.cs" />
+    <Compile Include="Serialization\FastText\FastTextPropertySerializer.cs" />
+    <Compile Include="Serialization\FastText\FastTextPropertyTypeSerializerCache.cs" />
     <Compile Include="Serialization\FastTextSerializer.cs" />
-    <Compile Include="Serialization\FastTextTypeSerializer.cs" />
-    <Compile Include="Serialization\FastTextTypeSerializerCache.cs" />
-    <Compile Include="Serialization\NotAutomaticallyLoadedAttribute.cs" />
+    <Compile Include="Serialization\FastText\FastTextTypeSerializer.cs" />
+    <Compile Include="Serialization\FastText\FastTextTypeSerializerCache.cs" />
     <Compile Include="Serialization\ObjectSerializer.cs" />
     <Compile Include="Serialization\PropertySerializer.cs" />
     <Compile Include="Serialization\Serializer.cs" />
@@ -441,7 +440,7 @@
     <Compile Include="Serialization\TypeSerializers\GuidSerializer.cs" />
     <Compile Include="Serialization\TypeSerializers\IntSerializer.cs" />
     <Compile Include="Serialization\TypeSerializers\LongSerializer.cs" />
-    <Compile Include="Serialization\FastTextStringSerializer.cs" />
+    <Compile Include="Serialization\FastText\FastTextStringSerializer.cs" />
     <Compile Include="Serialization\TypeSerializers\SByteSerializer.cs" />
     <Compile Include="Serialization\TypeSerializers\ShortSerializer.cs" />
     <Compile Include="Serialization\TypeSerializers\StringSerializer.cs" />
