--- a/src/Magnum.Specs/Magnum.Specs.csproj
+++ b/src/Magnum.Specs/Magnum.Specs.csproj
@@ -86,6 +86,8 @@
     <Compile Include="Channels\Interval_Specs.cs" />
     <Compile Include="Channels\Mailbox_Specs.cs" />
     <Compile Include="Channels\PingPong_Specs.cs" />
+    <Compile Include="Channels\RemoteChannel_Specs.cs" />
+    <Compile Include="Channels\SerializedChannel_Specs.cs" />
     <Compile Include="Channels\SynchronizationContext_Specs.cs" />
     <Compile Include="Channels\ThreadPoolChannel_Specs.cs" />
     <Compile Include="Channels\UntypedChannelSubscription_Specs.cs" />
