--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -92,6 +92,8 @@
     <Compile Include="Binding\TypeBinders\UShortBinder.cs" />
     <Compile Include="Binding\TypeBinders\ValueTypeBinder.cs" />
     <Compile Include="Channels\ChannelSubscription.cs" />
+    <Compile Include="Channels\WcfChannelAdapter.cs" />
+    <Compile Include="Channels\WcfUntypedChannel.cs" />
     <Compile Include="Channels\Configuration\AbstractChannelSubscriptionConfigurator.cs" />
     <Compile Include="Channels\Configuration\AddChannelVisitor.cs" />
     <Compile Include="Channels\Configuration\ConsumerConfigurator.cs" />
@@ -108,9 +110,14 @@
     <Compile Include="Channels\Configuration\UntypedChannelSubscriptionConfigurator.cs" />
     <Compile Include="Channels\Configuration\UntypedConfigurator.cs" />
     <Compile Include="Channels\Configuration\UntypedSubscriptionConfigurator.cs" />
+    <Compile Include="Channels\DeserializeChannel.cs" />
+    <Compile Include="Channels\DeserializeMessageEnvelopeChannel.cs" />
     <Compile Include="Channels\FlattenChannelVisitor.cs" />
-    <Compile Include="Channels\LocalWcfChannel.cs" />
-    <Compile Include="Channels\LocalWcfChannelService.cs" />
+    <Compile Include="Channels\WcfChannel.cs" />
+    <Compile Include="Channels\WcfChannelService.cs" />
+    <Compile Include="Channels\WcfUntypedChannelAdapter.cs" />
+    <Compile Include="Channels\MessageEnvelope.cs" />
+    <Compile Include="Channels\SerializeChannel.cs" />
     <Compile Include="Channels\UntypedChannelAdapter.cs" />
     <Compile Include="Channels\UntypedChannelRouter.cs" />
     <Compile Include="Channels\ExtensionsForChannels.cs" />
@@ -125,7 +132,7 @@
     <Compile Include="Channels\TypedChannelAdapter.cs" />
     <Compile Include="Channels\UntypedChannel.cs" />
     <Compile Include="Channels\LocalWcfChannelProxy.cs" />
-    <Compile Include="Channels\LocalWcfChannelServiceHost.cs" />
+    <Compile Include="Channels\WcfMessageEnvelope.cs" />
     <Compile Include="Extensions\ExtensionsToUri.cs" />
     <Compile Include="Fibers\Internal\AbstractFiber.cs" />
     <Compile Include="Fibers\Fiber.cs" />
