--- a/src/Magnum.Specs/Magnum.Specs.csproj
+++ b/src/Magnum.Specs/Magnum.Specs.csproj
@@ -182,6 +182,7 @@
     <Compile Include="Reflection\Generic_AdditionalSpecs.cs" />
     <Compile Include="Reflection\PropertyPerformance_Specs.cs" />
     <Compile Include="Serialization\Array_Specs.cs" />
+    <Compile Include="Serialization\Dictionary_Specs.cs" />
     <Compile Include="Serialization\Object_Specs.cs" />
     <Compile Include="Serialization\SimpleType_Specs.cs" />
     <Compile Include="Serialization\FastSerializerObjects_Specs.cs" />
