--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -92,8 +92,9 @@
     <Compile Include="Binding\TypeBinders\UShortBinder.cs" />
     <Compile Include="Binding\TypeBinders\ValueTypeBinder.cs" />
     <Compile Include="Channels\ChannelSubscription.cs" />
-    <Compile Include="Channels\WcfChannelAdapter.cs" />
-    <Compile Include="Channels\WcfUntypedChannel.cs" />
+    <Compile Include="Channels\WcfChannelHost.cs" />
+    <Compile Include="Channels\WcfChannelProxy.cs" />
+    <Compile Include="Channels\WcfUntypedChannelProxy.cs" />
     <Compile Include="Channels\Configuration\AbstractChannelSubscriptionConfigurator.cs" />
     <Compile Include="Channels\Configuration\AddChannelVisitor.cs" />
     <Compile Include="Channels\Configuration\ConsumerConfigurator.cs" />
@@ -113,9 +114,9 @@
     <Compile Include="Channels\DeserializeChannel.cs" />
     <Compile Include="Channels\DeserializeMessageEnvelopeChannel.cs" />
     <Compile Include="Channels\FlattenChannelVisitor.cs" />
-    <Compile Include="Channels\WcfChannel.cs" />
-    <Compile Include="Channels\WcfChannelService.cs" />
-    <Compile Include="Channels\WcfUntypedChannelAdapter.cs" />
+    <Compile Include="Channels\Internal\WcfChannel.cs" />
+    <Compile Include="Channels\Internal\WcfChannelService.cs" />
+    <Compile Include="Channels\WcfUntypedChannelHost.cs" />
     <Compile Include="Channels\MessageEnvelope.cs" />
     <Compile Include="Channels\SerializeChannel.cs" />
     <Compile Include="Channels\UntypedChannelAdapter.cs" />
@@ -132,7 +133,7 @@
     <Compile Include="Channels\TypedChannelAdapter.cs" />
     <Compile Include="Channels\UntypedChannel.cs" />
     <Compile Include="Channels\LocalWcfChannelProxy.cs" />
-    <Compile Include="Channels\WcfMessageEnvelope.cs" />
+    <Compile Include="Channels\Internal\WcfMessageEnvelope.cs" />
     <Compile Include="Extensions\ExtensionsToUri.cs" />
     <Compile Include="Fibers\Internal\AbstractFiber.cs" />
     <Compile Include="Fibers\Fiber.cs" />
@@ -163,9 +164,8 @@
     <Compile Include="Calendar\Holidays\MemorialDayObservedCheck.cs" />
     <Compile Include="Calendar\DefaultCalendar.cs" />
     <Compile Include="Calendar\Months.cs" />
-    <Compile Include="Fibers\FiberProvider.cs" />
+    <Compile Include="Fibers\FiberFactory.cs" />
     <Compile Include="Channels\AsyncResultChannel.cs" />
-    <Compile Include="Channels\ChannelCache.cs" />
     <Compile Include="Channels\ChannelAccessor.cs" />
     <Compile Include="Channels\ChannelVisitor.cs" />
     <Compile Include="Channels\ConsumerChannel.cs" />
