--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -52,7 +52,10 @@
       <Link>SolutionVersion.cs</Link>
     </Compile>
     <Compile Include="Actors\Actor.cs" />
+    <Compile Include="Actors\ActorCache.cs" />
     <Compile Include="Actors\ActorFactory.cs" />
+    <Compile Include="Actors\ActorRegistry.cs" />
+    <Compile Include="Actors\ActorRepository.cs" />
     <Compile Include="Actors\Internal\ActorChannelProvider.cs" />
     <Compile Include="Actors\Internal\ThreadStaticActorFactory.cs" />
     <Compile Include="Actors\Internal\TransientActorFactory.cs" />
@@ -282,10 +285,6 @@
     <Compile Include="Extensions\ExtensionsToAttributes.cs" />
     <Compile Include="Extensions\ExtensionsToDateTime.cs" />
     <Compile Include="Extensions\ExtensionsToDictionary.cs" />
-    <Compile Include="EventStreamProcessing\ObjectParser.cs" />
-    <Compile Include="EventStreamProcessing\Parser.cs" />
-    <Compile Include="EventStreamProcessing\PatternBasedObjectParser.cs" />
-    <Compile Include="EventStreamProcessing\Result.cs" />
     <Compile Include="Extensions\ExtensionsToDisposable.cs" />
     <Compile Include="Extensions\ExtensionsToEnumerable.cs" />
     <Compile Include="Extensions\ExtensionsToEventHandler.cs" />
