--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -296,6 +296,26 @@
     <Compile Include="Extensions\ExtensionsToRange.cs" />
     <Compile Include="Extensions\ExtensionsToString.cs" />
     <Compile Include="Extensions\ExtensionsToType.cs" />
+    <Compile Include="FileSystem\Events\DirectoryChanged.cs" />
+    <Compile Include="FileSystem\Events\FileSystemDeleted.cs" />
+    <Compile Include="FileSystem\Events\FileSystemEventType.cs" />
+    <Compile Include="FileSystem\Internal\DirectoryChangedImpl.cs" />
+    <Compile Include="FileSystem\Events\DirectoryCreated.cs" />
+    <Compile Include="FileSystem\Internal\DirectoryCreatedImpl.cs" />
+    <Compile Include="FileSystem\Events\DirectoryRenamed.cs" />
+    <Compile Include="FileSystem\Internal\DirectoryRenamedImpl.cs" />
+    <Compile Include="FileSystem\Events\FileChanged.cs" />
+    <Compile Include="FileSystem\Internal\FileChangedImpl.cs" />
+    <Compile Include="FileSystem\Events\FileCreated.cs" />
+    <Compile Include="FileSystem\Internal\FileCreatedImpl.cs" />
+    <Compile Include="FileSystem\Events\FileRenamed.cs" />
+    <Compile Include="FileSystem\Internal\FileRenamedImpl.cs" />
+    <Compile Include="FileSystem\Events\FileSystemChanged.cs" />
+    <Compile Include="FileSystem\Events\FileSystemCreated.cs" />
+    <Compile Include="FileSystem\Events\FileSystemEvent.cs" />
+    <Compile Include="FileSystem\Events\FileSystemRenamed.cs" />
+    <Compile Include="FileSystem\FileSystemEventProducer.cs" />
+    <Compile Include="FileSystem\Internal\FileSystemDeletedImpl.cs" />
     <Compile Include="Graphing\Edge.cs" />
     <Compile Include="Graphing\Vertex.cs" />
     <Compile Include="Logging\ConsoleLogger.cs" />
