--- a/src/Magnum.RulesEngine.Visualizers/Magnum.RulesEngine.Visualizers.csproj
+++ b/src/Magnum.RulesEngine.Visualizers/Magnum.RulesEngine.Visualizers.csproj
@@ -67,6 +67,7 @@
     <Compile Include="..\SolutionVersion.cs">
       <Link>SolutionVersion.cs</Link>
     </Compile>
+    <Compile Include="ChannelGraphGenerator.cs" />
     <Compile Include="PipelineVisualizerForm.cs">
       <SubType>Form</SubType>
     </Compile>
