--- a/src/Magnum.Specs/Magnum.Specs.csproj
+++ b/src/Magnum.Specs/Magnum.Specs.csproj
@@ -126,6 +126,7 @@
     <Compile Include="Invoker\FastInvoker_Specs.cs" />
     <Compile Include="Invoker\Performance_Specs.cs" />
     <Compile Include="Logging\Logging_Specs.cs" />
+    <Compile Include="Monads\Currying_Specs.cs" />
     <Compile Include="Policies\ExceptionPolicy_Specs.cs" />
     <Compile Include="CommandLineParser\EchoCommand.cs" />
     <Compile Include="CommandLineParser\Executor_Specs.cs" />
