Refactoring of some namespaces in Channels, added UntypedChannel Add to connection configurator

--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -94,43 +94,40 @@
     <Compile Include="Binding\TypeBinders\UriBinder.cs" />
     <Compile Include="Binding\TypeBinders\UShortBinder.cs" />
     <Compile Include="Binding\TypeBinders\ValueTypeBinder.cs" />
-    <Compile Include="Channels\ChannelSubscription.cs" />
+    <Compile Include="Channels\ChannelConnection.cs" />
+    <Compile Include="Channels\Configuration\ChannelConnectionConfigurator.cs" />
     <Compile Include="Channels\InstanceChannelProvider.cs" />
     <Compile Include="Channels\SelectiveConsumerChannel.cs" />
     <Compile Include="Channels\Visitors\GraphChannelVisitor.cs" />
     <Compile Include="Channels\WcfChannelHost.cs" />
     <Compile Include="Channels\WcfChannelProxy.cs" />
-    <Compile Include="Channels\WcfUntypedChannelProxy.cs" />
-    <Compile Include="Channels\Configuration\AbstractChannelSubscriptionConfigurator.cs" />
-    <Compile Include="Channels\Configuration\AddChannelVisitor.cs" />
+    <Compile Include="Channels\Configuration\AbstractChannelConnectionConfigurator.cs" />
+    <Compile Include="Channels\Configuration\ConnectChannelVisitor.cs" />
     <Compile Include="Channels\Configuration\ConsumerConfigurator.cs" />
     <Compile Include="Channels\Configuration\ConsumerConfiguratorImpl.cs" />
-    <Compile Include="Channels\Configuration\DistinctIntervalChannelSubscriptionConfigurator.cs" />
-    <Compile Include="Channels\Configuration\IntervalChannelSubscriptionConfigurator.cs" />
-    <Compile Include="Channels\Configuration\SubscriptionConfigurator.cs" />
+    <Compile Include="Channels\Configuration\DistinctIntervalChannelConnectionConfigurator.cs" />
+    <Compile Include="Channels\Configuration\IntervalChannelConnectionConfigurator.cs" />
+    <Compile Include="Channels\Configuration\ConnectionConfigurator.cs" />
     <Compile Include="Channels\ChannelAdapter.cs" />
-    <Compile Include="Channels\Configuration\TypedChannelSubscription.cs" />
-    <Compile Include="Channels\Configuration\TypedChannelSubscriptionConfigurator.cs" />
+    <Compile Include="Channels\Configuration\TypedChannelConnection.cs" />
+    <Compile Include="Channels\Configuration\TypedChannelConnectionConfigurator.cs" />
     <Compile Include="Channels\Configuration\TypedConfigurator.cs" />
-    <Compile Include="Channels\Configuration\TypedSubscriptionConfigurator.cs" />
-    <Compile Include="Channels\Configuration\UntypedChannelSubscription.cs" />
-    <Compile Include="Channels\Configuration\UntypedChannelSubscriptionConfigurator.cs" />
+    <Compile Include="Channels\Configuration\TypedConnectionConfigurator.cs" />
+    <Compile Include="Channels\Configuration\UntypedChannelConnection.cs" />
+    <Compile Include="Channels\Configuration\UntypedChannelConnectionConfigurator.cs" />
     <Compile Include="Channels\Configuration\UntypedConfigurator.cs" />
-    <Compile Include="Channels\Configuration\UntypedSubscriptionConfigurator.cs" />
+    <Compile Include="Channels\Configuration\UntypedConnectionConfigurator.cs" />
     <Compile Include="Channels\DeserializeChannel.cs" />
     <Compile Include="Channels\DeserializeMessageEnvelopeChannel.cs" />
-    <Compile Include="Channels\FlattenChannelVisitor.cs" />
+    <Compile Include="Channels\Visitors\FlattenChannelVisitor.cs" />
     <Compile Include="Channels\Internal\WcfChannel.cs" />
     <Compile Include="Channels\Internal\WcfChannelService.cs" />
-    <Compile Include="Channels\WcfUntypedChannelHost.cs" />
     <Compile Include="Channels\MessageEnvelope.cs" />
     <Compile Include="Channels\SerializeChannel.cs" />
-    <Compile Include="Channels\UntypedChannelAdapter.cs" />
-    <Compile Include="Channels\UntypedChannelRouter.cs" />
     <Compile Include="Channels\ExtensionsForChannels.cs" />
     <Compile Include="Channels\MessageConverter.cs" />
-    <Compile Include="Channels\Configuration\RemoveChannelVisitor.cs" />
-    <Compile Include="Channels\SelectiveConsumer.cs" />
+    <Compile Include="Channels\Configuration\DisconnectChannelVisitor.cs" />
+    <Compile Include="Channels\ConsumerFactory.cs" />
     <Compile Include="Channels\DefaultMailbox.cs" />
     <Compile Include="Channels\Mailbox.cs" />
     <Compile Include="Channels\RequestResponseChannel.cs" />
@@ -138,7 +135,6 @@
     <Compile Include="Channels\Visitors\TraceChannelVisitor.cs" />
     <Compile Include="Channels\TypedChannelAdapter.cs" />
     <Compile Include="Channels\UntypedChannel.cs" />
-    <Compile Include="Channels\LocalWcfChannelProxy.cs" />
     <Compile Include="Channels\Internal\WcfMessageEnvelope.cs" />
     <Compile Include="Extensions\ExtensionsToUri.cs" />
     <Compile Include="Fibers\Internal\AbstractFiber.cs" />
@@ -195,7 +191,7 @@
     <Compile Include="Channels\KeyAccessor.cs" />
     <Compile Include="Channels\LastIntervalChannel.cs" />
     <Compile Include="Channels\FilterChannel.cs" />
-    <Compile Include="Channels\ChannelRouter.cs" />
+    <Compile Include="Channels\BroadcastChannel.cs" />
     <Compile Include="Channels\SynchronizedChannel.cs" />
     <Compile Include="Channels\ThreadPoolChannel.cs" />
     <Compile Include="Channels\ThreadStaticChannelProvider.cs" />
